--- a/TestTask/App.xaml
+++ b/TestTask/App.xaml
@@ -2,8 +2,9 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:TestTask"
-             StartupUri="MainWindow.xaml">
+             xmlns:vm="clr-namespace:TestTask.ViewModel"
+             StartupUri="View/MainWindow.xaml">
     <Application.Resources>
-         
+        <vm:VMLocator x:Key="VMLocator"/>
     </Application.Resources>
 </Application>
