--- a/TestTask/App.xaml
+++ b/TestTask/App.xaml
@@ -2,9 +2,238 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:TestTask"
-             xmlns:vm="clr-namespace:TestTask.ViewModel"
+             xmlns:m="clr-namespace:TestTask.Model"
+             xmlns:vm="clr-namespace:TestTask.ViewModel" 
+             xmlns:mConverter="clr-namespace:TestTask.Model.Converter"
              StartupUri="View/MainWindow.xaml">
     <Application.Resources>
-        <vm:VMLocator x:Key="VMLocator"/>
+
+        <ResourceDictionary>
+            <BooleanToVisibilityConverter x:Key="bool2VisibilityConverter" />
+            <mConverter:BooleanToGridLengthMultiConverter x:Key="BoolToGridLengthMulti"/>
+            <mConverter:BooleanArrayToBooleanMultiConverter x:Key="BoolArrayToBoolMulti"/>
+            <vm:VMLocator x:Key="VMLocator"/>
+
+
+            <Style x:Key="RowHeaderGripperStyle"
+       TargetType="{x:Type Thumb}">
+                <Setter Property="Height"
+          Value="8" />
+                <Setter Property="Background"
+          Value="Transparent" />
+                <Setter Property="Cursor"
+          Value="SizeNS" />
+                <Setter Property="Template">
+                    <Setter.Value>
+                        <ControlTemplate TargetType="{x:Type Thumb}">
+                            <Border Background="{TemplateBinding Background}"
+                Padding="{TemplateBinding Padding}" />
+                        </ControlTemplate>
+                    </Setter.Value>
+                </Setter>
+            </Style>
+
+            <Style x:Key="ColumnHeaderGripperStyle"
+       TargetType="{x:Type Thumb}">
+                <Setter Property="Width"
+          Value="8" />
+                <Setter Property="Background"
+          Value="Transparent" />
+                <Setter Property="Cursor"
+          Value="SizeWE" />
+                <Setter Property="Template">
+                    <Setter.Value>
+                        <ControlTemplate TargetType="{x:Type Thumb}">
+                            <Border Background="{TemplateBinding Background}"
+                Padding="{TemplateBinding Padding}" />
+                        </ControlTemplate>
+                    </Setter.Value>
+                </Setter>
+            </Style>
+
+
+            <Style TargetType="{x:Type CheckBox}">
+                <Setter Property="Background" Value="White" />
+                <Setter Property="BorderBrush" Value="#FF262E34"/>
+                <Setter Property="Foreground" Value="#FF262E34"/>
+                <Setter Property="BorderThickness" Value="1"/>
+                <Setter Property="Template">
+                    <Setter.Value>
+                        <ControlTemplate TargetType="{x:Type CheckBox}">
+                            <StackPanel Orientation="Horizontal" HorizontalAlignment="Stretch" >
+                                <Border BorderBrush="{TemplateBinding BorderBrush}" Background="{TemplateBinding Background}" BorderThickness="{TemplateBinding BorderThickness}" Width="15" Height="15">
+                                    <Path Stretch="Uniform" Width="15" Height="10" Fill="HotPink" Name="eliCheck" Data="F1 M 9.97498,1.22334L 4.6983,9.09834L 4.52164,9.09834L 0,5.19331L 1.27664,3.52165L 4.255,6.08833L 8.33331,1.52588e-005L 9.97498,1.22334 Z " Visibility="Collapsed"/>
+                                </Border>
+                                <TextBlock Margin="5,0,0,0"  VerticalAlignment="Center" Foreground="{TemplateBinding Foreground}" Text="{TemplateBinding Content}"></TextBlock>
+                            </StackPanel>
+                            <ControlTemplate.Triggers>
+                                <Trigger Property="IsMouseOver" Value="True">
+                                    <Setter Property="Background" Value="LightGray" />
+                                </Trigger>
+                                <Trigger Property="IsPressed" Value="True">
+                                    <Setter Property="Background" Value="#FF9C9E9F" />
+                                </Trigger>
+                                <Trigger Property="IsEnabled" Value="False">
+                                    <Setter Property="Background" Value="LightGray" />
+                                    <Setter Property="Foreground" Value="Gray" />
+                                    <Setter Property="BorderBrush" Value="Gray"/>
+                                    <Setter TargetName="eliCheck" Property="Opacity" Value="0.5" />
+                                </Trigger>
+                                <Trigger Property="IsChecked" Value="True">
+                                    <Setter TargetName="eliCheck" Property="Visibility" Value="Visible"></Setter>
+                                </Trigger>
+                            </ControlTemplate.Triggers>
+                        </ControlTemplate>
+                    </Setter.Value>
+                </Setter>
+            </Style>
+
+
+            <Color x:Key="ControlMouseOverColor">#FF3843C4</Color>
+            <Color x:Key="BorderLightColor">#FFCCCCCC</Color>
+            <Color x:Key="BorderDarkColor">#FF444444</Color>
+            <Color x:Key="ControlLightColor">White</Color>
+            <Color x:Key="ControlMediumColor">Black</Color>
+
+            <Style TargetType="{x:Type DataGridRowHeader}">
+                <Setter Property="Template">
+                    <Setter.Value>
+                        <ControlTemplate TargetType="{x:Type DataGridRowHeader}">
+                            <Grid>
+                                <VisualStateManager.VisualStateGroups>
+                                    <VisualStateGroup x:Name="CommonStates">
+                                        <VisualState x:Name="Normal" />
+                                        <VisualState x:Name="Normal_CurrentRow" />
+                                        <VisualState x:Name="Unfocused_EditingRow" />
+                                        <VisualState x:Name="Normal_EditingRow" />
+                                        <VisualState x:Name="MouseOver">
+                                            <Storyboard>
+                                                <ColorAnimationUsingKeyFrames Storyboard.TargetName="rowHeaderBorder"
+                                                Storyboard.TargetProperty="(Panel.Background).
+                      (GradientBrush.GradientStops)[1].(GradientStop.Color)">
+                                                    <EasingColorKeyFrame KeyTime="0"
+                                         Value="{StaticResource ControlMouseOverColor}" />
+                                                </ColorAnimationUsingKeyFrames>
+                                            </Storyboard>
+                                        </VisualState>
+                                        <VisualState x:Name="MouseOver_CurrentRow" />
+                                        <VisualState x:Name="MouseOver_Unfocused_EditingRow" />
+                                        <VisualState x:Name="MouseOver_EditingRow" />
+                                        <VisualState x:Name="MouseOver_Unfocused_Selected" />
+                                        <VisualState x:Name="MouseOver_Selected" />
+                                        <VisualState x:Name="MouseOver_Unfocused_CurrentRow_Selected" />
+                                        <VisualState x:Name="MouseOver_CurrentRow_Selected" />
+                                        <VisualState x:Name="Unfocused_Selected" />
+                                        <VisualState x:Name="Unfocused_CurrentRow_Selected" />
+                                        <VisualState x:Name="Normal_CurrentRow_Selected" />
+                                        <VisualState x:Name="Normal_Selected" />
+                                    </VisualStateGroup>
+                                </VisualStateManager.VisualStateGroups>
+                                <Border x:Name="rowHeaderBorder"
+                  Width="10"
+                  BorderThickness="1">
+                                    <Border.BorderBrush>
+                                        <LinearGradientBrush EndPoint="0.5,1"
+                                   StartPoint="0.5,0">
+                                            <GradientStop Color="{DynamicResource BorderLightColor}"
+                              Offset="0" />
+                                            <GradientStop Color="{DynamicResource BorderDarkColor}"
+                              Offset="1" />
+                                        </LinearGradientBrush>
+                                    </Border.BorderBrush>
+                                    <Border.Background>
+                                        <LinearGradientBrush EndPoint="0.5,1"
+                                   StartPoint="0.5,0">
+                                            <GradientStop Color="{DynamicResource ControlLightColor}"
+                              Offset="0" />
+                                            <GradientStop Color="{DynamicResource ControlMediumColor}"
+                              Offset="1" />
+                                        </LinearGradientBrush>
+                                    </Border.Background>
+                                    <StackPanel Orientation="Horizontal">
+                                        <ContentPresenter VerticalAlignment="Center"
+                                SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}" />
+                                        <Control SnapsToDevicePixels="false"
+                       Template="{Binding ValidationErrorTemplate, 
+                  RelativeSource={RelativeSource AncestorType={x:Type DataGridRow}}}"
+                       Visibility="{Binding (Validation.HasError), 
+                  Converter={StaticResource bool2VisibilityConverter}, 
+                  RelativeSource={RelativeSource AncestorType={x:Type DataGridRow}}}" />
+                                    </StackPanel>
+                                </Border>
+
+                                <Thumb x:Name="PART_TopHeaderGripper"
+                 Style="{StaticResource RowHeaderGripperStyle}"
+                 VerticalAlignment="Top" />
+                                <Thumb x:Name="PART_BottomHeaderGripper"
+                 Style="{StaticResource RowHeaderGripperStyle}"
+                 VerticalAlignment="Bottom" />
+                            </Grid>
+                        </ControlTemplate>
+                    </Setter.Value>
+                </Setter>
+            </Style>
+
+
+            
+
+            <Style TargetType="{x:Type DataGridColumnHeader}">
+                <Setter Property="VerticalContentAlignment"
+          Value="Center" />
+                <Setter Property="Template">
+                    <Setter.Value>
+                        <ControlTemplate TargetType="{x:Type DataGridColumnHeader}">
+                            <Grid>
+                                <Border x:Name="columnHeaderBorder"
+                  BorderThickness="1"
+                  Padding="3,0,3,0">
+                                    <Border.BorderBrush>
+                                        <LinearGradientBrush EndPoint="0.5,1"
+                                   StartPoint="0.5,0">
+                                            <GradientStop Color="{DynamicResource BorderLightColor}"
+                              Offset="0" />
+                                            <GradientStop Color="{DynamicResource BorderDarkColor}"
+                              Offset="1" />
+                                        </LinearGradientBrush>
+                                    </Border.BorderBrush>
+                                    <Border.Background>
+                                        <LinearGradientBrush EndPoint="0.5,1"
+                                   StartPoint="0.5,0">
+                                            <GradientStop Color="{DynamicResource ControlLightColor}"
+                              Offset="0" />
+                                            <GradientStop Color="{DynamicResource ControlMediumColor}"
+                              Offset="1" />
+                                        </LinearGradientBrush>
+                                    </Border.Background>
+                                    <ContentPresenter HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"
+                              SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}"
+                              VerticalAlignment="{TemplateBinding VerticalContentAlignment}" />
+                                </Border>
+
+                                <Thumb x:Name="PART_LeftHeaderGripper"
+                 HorizontalAlignment="Left"
+                 Style="{StaticResource ColumnHeaderGripperStyle}" />
+                                <Thumb x:Name="PART_RightHeaderGripper"
+                 HorizontalAlignment="Right"
+                 Style="{StaticResource ColumnHeaderGripperStyle}" />
+                            </Grid>
+                        </ControlTemplate>
+                    </Setter.Value>
+                </Setter>
+                <Setter Property="Background">
+                    <Setter.Value>
+                        <LinearGradientBrush EndPoint="0.5,1"
+                           StartPoint="0.5,0">
+                            <GradientStop Color="{DynamicResource ControlLightColor}"
+                      Offset="0" />
+                            <GradientStop Color="{DynamicResource ControlMediumColor}"
+                      Offset="1" />
+                        </LinearGradientBrush>
+                    </Setter.Value>
+                </Setter>
+            </Style>
+
+        </ResourceDictionary>
+        
     </Application.Resources>
 </Application>
